Move callback mechanism from player to audio output

The aout callbacks on the player are:

  • volume
  • device changed
  • mute

These are not related to the player itself and because the interface has access to the audio output, they could be moved to the audio output directly instead of relying on the vlc_variable callback mechanism.

It would allow implementing #22478 (audio device hotplug) too.