input_resource: forward audio callbacks to aout

Add a new audio callback structure parameter to input_resource, so that
the owner of the input_resource can be notified of the events coming
from audio_outputs created from within the input_resource.

In practice, the player will be able to receive the audio output events
from there.

Refs #22479